Fix overlap issue on projects page

--- a/stylesheets/bootstrap_cover.css
+++ b/stylesheets/bootstrap_cover.css
@@ -188,6 +188,12 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .masthead {
+    margin-bottom: 100px;
+  }
+}
+
 @media (max-height: 440px) {
   .myprojects {
     display: none;
